--- a/presentation/backup.tex
+++ b/presentation/backup.tex
@@ -414,6 +414,42 @@
 \end{frame}
 
 \begin{frame}[noframenumbering]
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=.65\columnwidth]{halfway-g1}
+    \caption{Group 1 neutron flux distribution with Rod 1 inserted by 27.5 inches.}
+    \label{fig:halfway-g1}
+  \end{figure}
+\end{frame}
+  
+\begin{frame}[noframenumbering]
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=.65\columnwidth]{halfway-g8}
+    \caption{Group 8 neutron flux distribution with Rod 1 inserted by 27.5 inches.}
+    \label{fig:halfway-g8}
+  \end{figure}
+\end{frame}
+
+\begin{frame}[noframenumbering]
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=.65\columnwidth]{inserted-g1}
+    \caption{Group 1 neutron flux distribution with Rod 1 inserted by 51 inches.}
+    \label{fig:inserted-g1}
+  \end{figure}
+\end{frame}
+  
+\begin{frame}[noframenumbering]
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=.65\columnwidth]{inserted-g8}
+    \caption{Group 8 neutron flux distribution with Rod 1 inserted by 51 inches.}
+    \label{fig:inserted-g8}
+  \end{figure}
+\end{frame}
+
+\begin{frame}[noframenumbering]
   \frametitle{MSRE Rod Drop Experiment}
   \textbf{Rod Height}
   \begin{figure}[htb!]
