--- a/presentation/control-rod.tex
+++ b/presentation/control-rod.tex
@@ -34,6 +34,7 @@
     \item Consist of highly neutron-absorbing materials such as boron or gadolinium
   \end{itemize}
   \textbf{Control rods are also important for licensing and safety characterization.}
+  \vspace{.2cm}
 
   $\Rightarrow$ \textbf{It is important to characterize control rod effects in all relevant
   transient scenarios.}
