--- a/presentation/objectives.tex
+++ b/presentation/objectives.tex
@@ -9,7 +9,7 @@
       \item \textbf{Improve Multiphysics Capabilities in Moltres}
       \begin{itemize}
         \item Verify and validate existing multiphysics coupling capabilities in Moltres
-        \item Implement a RANS-based turbulence model in Moltres
+        \item Implement a turbulence model in Moltres
       \end{itemize}
       \item \textbf{Develop a Hybrid Neutronics Method for Control Rod Modeling in Moltres}
       \begin{itemize}
