Final draft submitted and accepted by the grad college

--- a/main.tex
+++ b/main.tex
@@ -83,8 +83,9 @@
 %\title{A Hybrid Neutronics Method for Time-Dependent Control Rod Modeling in Molten Salt Reactors}
 \title{Advancements in Moltres for Time-Dependent Multiphysics Molten Salt Reactor Modeling}
 \author{Sun Myung Park}
-\department{Nuclear, Plasma \& Radiological Engineering}
-\degreeyear{2024}
+\department{Nuclear, Plasma, and Radiological Engineering}
+\concentration{Computational Science and Engineering}
+\degreeyear{2025}
 \committee{Associate Professor Kathryn D. Huff, Co-Chair \\
            Assistant Professor Madicken Munk, Co-Chair, Oregon State University \\
            Professor Rizwan Uddin \\
@@ -104,7 +105,7 @@
 \input{abstract}
 
 \end{abstract}
-\addcontentsline{toc}{chapter}{Abstract}
+%\addcontentsline{toc}{chapter}{Abstract}
 
 %\begin{dedication}
 %
@@ -115,7 +116,7 @@
 \input{acks}
 
 \end{acknowledgments}
-\addcontentsline{toc}{chapter}{Acknowledgments}
+%\addcontentsline{toc}{chapter}{Acknowledgments}
 
 %% The thesis format requires the Table of Contents to come
 %% before any other major sections, all of these sections after
