--- a/cnrs-benchmark/results.tex
+++ b/cnrs-benchmark/results.tex
@@ -60,13 +60,12 @@ Steps 0.2, 1.1, 1.2, and 1.3.
 
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=.49\columnwidth]{0-1-vel-plot}
-	\caption{Step 0.1 \textemdash\ Horizontal velocity component along BB'.}
-	\label{fig:0.1}
-\end{figure}
-%
-\begin{figure}[h]
-	\centering
+    \begin{subfigure}[b]{\textwidth}
+      \centering
+      \includegraphics[width=.49\columnwidth]{0-1-vel-plot}
+	  \caption{Step 0.1 \textemdash\ Horizontal velocity component along BB'.}
+	  \label{fig:0.1}
+    \end{subfigure}
     \begin{subfigure}[b]{.49\textwidth}
       \centering
 	  \includegraphics[width=\columnwidth]{0-2-fiss-plot}
@@ -80,6 +79,8 @@ Steps 0.2, 1.1, 1.2, and 1.3.
 	  \caption{Step 0.3 \textemdash\ Temperature distribution along BB'.}
 	  \label{fig:0.3}
     \end{subfigure}
+    \caption{Spatial distributions of relevant observables in Phase 0 from
+    Moltres and other software packages.}
 \end{figure}
 %
 \FloatBarrier
